Fix CI (#10)